2009-02-10	The InnoDB Team

	* handler/ha_innodb.h, handler/ha_innodb.cc:
	Fix Bug#41676 Table names are case insensitive in locking

2009-02-10	The InnoDB Team

	* ut/ut0mem.c:
	Map ut_malloc_low(), ut_realloc(), and ut_free() directly to
	malloc(), realloc(), and free() when innodb_use_sys_malloc is set.
	As a side effect, ut_total_allocated_memory ("Total memory allocated"
	in the "BUFFER POOL AND MEMORY" section of SHOW ENGINE INNODB STATUS)
	will exclude any memory allocated by these functions when
	innodb_use_sys_malloc is set.

2009-02-10	The InnoDB Team

	* btr/btr0cur.c, btr/btr0sea.c, buf/buf0buf.c, handler/ha_innodb.cc,
	include/buf0buf.ic, include/os0sync.h, include/os0sync.ic,
	include/srv0srv.h, include/sync0rw.h, include/sync0rw.ic,
	include/sync0sync.h, include/sync0sync.ic, include/univ.i,
	row/row0sel.c, srv/srv0srv.c, srv/srv0start.c,
	sync/sync0arr.c, sync/sync0rw.c, sync/sync0sync.c:
	On those platforms that support it, implement the synchronization
	primitives of InnoDB mutexes and read/write locks with GCC atomic
	builtins instead of Pthreads mutexes and InnoDB mutexes.  These
	changes are based on a patch supplied by Mark Callaghan of Google
	under a BSD license.

2009-01-30	The InnoDB Team

	* btr/btr0cur.c, btr/btr0sea.c, buf/buf0buf.c, handler/ha_innodb.cc,
	include/btr0sea.h, include/buf0buf.h, include/sync0sync.h,
	sync/sync0sync.c:
	Make the configuration parameter innodb_adaptive_hash_index dynamic,
	so that it can be changed at runtime.

2009-01-29	The InnoDB Team

	* handler/ha_innodb.cc, include/ibuf0ibuf.h, include/ibuf0ibuf.ic,
	ibuf/ibuf0ibuf.c:
	Implement the settable global variable innodb_change_buffering,
	with the allowed values 'none' and 'inserts'.  The default value
	'inserts' enables the buffering of inserts to non-unique secondary
	index trees when the B-tree leaf page is not in the buffer pool.

2009-01-27	The InnoDB Team

	* buf/buf0lru.c:
	Fix a race condition in buf_LRU_invalidate_tablespace():