@@ -14,6 +14,7 @@ Created 6/9/1994 Heikki Tuuri
 
 #include "mach0data.h"
 #include "buf0buf.h"
+#include "srv0srv.h"
 #include "mem0dbg.c"
 #include <stdarg.h>
 
